# c_motionsensor

./: .gitignore  CMakeLists.txt  README.md
c_motion/: CMakeLists.txt  main.c  main2.c
c_motion/depreciated/: motionsensor.c  motionsensor.py
c_motion/include/: lcd.h
include/: functions.h  lcd.h  lwipopts.h  mqtt_functions.h
src/: CMakeLists.txt  functions.c  lcd.c  main.c  mqtt_functions.c
